# olarte

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
data/: cutting_tools.csv
olarte/: main.py
olarte/core/: graph.py  ontology.py
tests/: test_concept.py
tests/files/: cutting_tools_short01.csv  cutting_tools_short02.csv  cutting_tools_short03.csv
